# pyAPNG

./: .editorconfig  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  README.rst  cute.py  requirements-lock.txt  requirements.txt  setup.cfg  setup.py  test.py
apng/: __init__.py
apng.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: conf.py  index.rst
test/: __init__.py  test.py  test_functional.py  test_make_text_chunk.py
test/ball/: frame-1.json  frame-11.json  frame-13.json  frame-14.json  frame-18.json  frame-2.json  frame-3.json  frame-5.json  frame-6.json  frame-9.json
test/clock/: frame-1.json  frame-11.json  frame-13.json  frame-16.json  frame-17.json  frame-18.json  frame-20.json  frame-22.json  frame-23.json  frame-24.json  frame-26.json  frame-27.json  frame-28.json  frame-32.json  frame-33.json  frame-35.json  frame-36.json  frame-38.json  frame-4.json  frame-40.json  frame-6.json  frame-9.json
test/fixtures/ball/: frame-12.json  frame-15.json  frame-16.json  frame-17.json  frame-19.json  frame-20.json  frame-4.json  frame-7.json  frame-8.json
test/fixtures/clock/: frame-10.json  frame-12.json  frame-14.json  frame-15.json  frame-2.json  frame-21.json  frame-25.json  frame-29.json  frame-3.json  frame-30.json  frame-31.json  frame-34.json  frame-37.json  frame-39.json  frame-5.json  frame-7.json  frame-8.json
test/fixtures/multi_fdat/: README.txt  frame-1.json  frame-13.json  frame-17.json  frame-45.json  frame-46.json  frame-5.json  frame-6.json  frame-7.json
test/num_plays/: property.json
