[metadata]
name = apng
version = 0.3.3
description = A Python module to deal with APNG file.
author = eight
author_email = eight04@gmail.com

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: Chinese (Traditional)
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Multimedia :: Graphics :: Graphics Conversion
	
keywords = png, apng, image, convert
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/pyAPNG

[options]
zip_safe = True
packages = find:

[options.packages.find]
exclude = test

[bdist_wheel]
universal = True

[vpip]
command_fallback = python cute.py
